# autonotes-ai

./: .gitignore  pyproject.toml
backend/app/: main.py
